fix alignment for subtitle on featured collection

--- a/assets/template-collection.css
+++ b/assets/template-collection.css
@@ -100,6 +100,7 @@
 
 .collection__description > * {
   margin: 0;
+  text-align: center;
 }
 
 .collection__title .title:not(:only-child) {
